# DIVA

./: .env  .gitignore  README.md  directory_structure.txt  oauth-public.key  pyproject.toml  requirements.txt
ai/agents/: resume_parser.py
ai/llms/: config.py  models.py
app/: alembic.ini  all_files.txt  main.py
app/alembic/: env.py
app/alembic/versions/: 002_insert_onboarding_questions.py  003_insert_onboarding_questions.py  6258af572075_create_onboarding_tables.py  a7300fc42c26_initial_schema.py
app/api/: api.py
app/api/endpoints/: auth.py  onboard_questions.py  onboarding.py  resume.py  user_info.py
app/core/: config.py  errors.py  exception_handlers.py  middleware.py  redis.py  security.py
app/crud/: onboard_questions.py  onboarding.py  resume.py  user_info.py
app/db/: base.py  session.py
app/models/: onboarding.py
app/schemas/: __init__.py  general_response.py  onboard_questions.py  onboarding.py  user_info.py
app/utils/: api_utils.py  logging.py  redis_utils.py  s3_utils.py
backend/app/: alembic.ini  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4e17e47ab352_create_initial_tables.py
backend/app/app/: main.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: auth.py  onboarding.py
backend/app/app/core/: config.py  redis.py  security.py
backend/app/app/db/: base.py  session.py
backend/app/app/models/: onboarding.py  user.py
